--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
+    "tailwind-scrollbar": "^3.1.0",
     "tsparticles": "^3.5.0"
   },
   "devDependencies": {
