--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.114.6",
+    "@react-three/fiber": "^8.17.10",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
-    "framer-motion": "^11.11.9",
+    "clsx": "^2.1.1",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
+    "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar": "^3.1.0",
-    "tsparticles": "^3.5.0"
+    "three": "^0.169.0",
+    "three-globe": "^2.33.0",
+    "tsparticles": "^3.5.0",
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
