--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,12 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": ".",
+    "paths": {
+      // "$lib": ["./src/lib"],
+			"$lib/*": ["src/lib/*"]
+    }
   },
   "include": [
     "src"
