--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "tailwind-scrollbar": "^3.1.0",
     "three": "^0.169.0",
     "three-globe": "^2.33.0",
-    "tsparticles": "^3.5.0",
-    "vite-tsconfig-paths": "^5.0.1"
+    "tsparticles": "^3.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -39,6 +38,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
