--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "clsx": "^2.1.1",
+    "lenis": "^1.1.14",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
