--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.10",
     "gsap": "^3.12.5",
     "lenis": "^1.1.14",
     "path": "^0.12.7",
