--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^11.11.10",
     "gsap": "^3.12.5",
     "lenis": "^1.1.14",
+    "lucide-react": "^0.468.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
